[project]
name = "ethical-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joe Eberle", email = "josepheberle@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ethical-guardrails = "ethical_guardrails:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
